# STU

./: Текстовый файл….txt
Stu/: .env.example  API.md  ARCHITECTURE.md  DEPLOY.md  E2E.md  Makefile  README.md  SECURITY.md  WIN11_QUICKSTART.md  go.mod  go.sum
Stu/client/: staticfs.go
Stu/client/shared-go/: README.md
Stu/client/web/: README.md
Stu/cmd/api-gateway/: main.go
Stu/cmd/auth/: main.go
Stu/cmd/media/: main.go
Stu/cmd/realtime/: main.go
Stu/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml
Stu/deploy/nginx/: stu.conf
Stu/deploy/scripts/: healthcheck.sh  install.sh
Stu/deploy/systemd/: stu@.service
Stu/docs/: 01_spec.md  02_dataflows.md
Stu/internal/admin/: http.go  users.go
Stu/internal/adminauth/: http.go  repository.go  service.go
Stu/internal/app/: httpserver.go
Stu/internal/auth/: access_validator.go  context.go  context_admin.go  context_ban.go  http.go  middleware.go  repository.go  service.go  service_test.go
Stu/internal/config/: config.go
Stu/internal/dialogs/: events.go  http.go  repository.go  service.go  service_test.go
Stu/internal/handlers/: health.go
Stu/internal/mailer/: mailer.go
Stu/internal/middleware/: admin.go  logging.go  ratelimit.go  security.go
Stu/internal/observability/: logging.go
Stu/internal/realtime/: gateway_proxy.go  hub.go  hub_test.go  (+1 more)
Stu/migrations/: 0001_init.sql  0002_auth_and_indexes.sql  0003_messages_status.sql  0004_admin_reports.sql  0005_admin_security_ai.sql  0006_reports_fix_reported_user_id.sql
Stu/services/moderation-agent/: main.py  pyproject.toml
(+17 files in other folders)
