[project]
name = "stu-moderation-agent"
version = "0.1.0"
description = "Moderation classifier for Stu (only on user reports)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
